@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue Oct 16 14:05:00 2001 -->
+<!-- Tue Oct 16 14:12:13 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -303,6 +303,15 @@ loop):
 <blockquote><pre>
 
 LOCAL_DELIVERY_AGENT = "/path/to/bin/procmail ~/.procmailrc-tmda"
+
+</blockquote></pre>
+
+<b>~/.procmailrc-tmda</b> at a minimum might contain the location of
+your default mailbox.  e.g,
+
+<blockquote><pre>
+
+DEFAULT=/path/to/your/inbox
 
 </blockquote></pre>
 
